# sustn

./: .env.example  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: deploy-server.yaml  lint-and-format.yml  qa-build.yaml  release.yaml
docs/: architecture.md  privacy.md  releasing.md
script/: bump_version.sh
server/: .env.example  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
server/migrations/: 0001_initial.sql  0002_rate_limits.sql
server/src/: index.ts
server/src/db/: index.ts  schema.ts
server/src/lib/: config.ts  github.ts  rate-limit.ts
server/src/routes/: auth.ts  feedback.ts  health.ts  metrics.ts
src-tauri/: Cargo.toml  macos.entitlements  tauri.conf.json  tauri.dev.conf.json  tauri.qa.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  command.rs  engine_commands.rs  lib.rs  main.rs  menu.rs  migrations.rs  preflight.rs  repository.rs
src-tauri/src/engine/: budget.rs  db.rs  git.rs  mod.rs  prioritizer.rs  scanner.rs  scheduler.rs  worker.rs  worktree.rs
src/core/: config.ts
src/core/api/: useAppVersion.ts  useAuth.ts  useEngine.ts  useFeedback.ts  (+11 more)
src/ui/: App.css  App.tsx  main.tsx
web/: CHANGELOG-GUIDE.md  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
(+119 files in other folders)
