[package]
name = "sustn"
version = "0.1.0"
description = "Background conductor for AI coding agents"
authors = ["SUSTN Contributors"]
edition = "2021"
default-run = "sustn"

[lib]
name = "sustn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "~2"
tauri-plugin-fs = { version = "~2", features = ["watch"] }
tauri-plugin-sql = { version = "~2", features = ["sqlite"] }
tauri-plugin-store = "~2"
tauri-plugin-process = "~2"
tauri-plugin-notification = "~2"
tauri-plugin-dialog = "~2"
tauri-plugin-opener = "~2"
tauri-plugin-os = "~2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
